crates/swc_ecma_parser/tests/test262-error-references/fail/49624f905645b7d0.js.stderr
error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/49624f905645b7d0.js:1:24
  |
1 | for (let x, y, z, let;;;) {}
  |                        ^

